--- a/ajaxPOST.html
+++ b/ajaxPOST.html
@@ -25,7 +25,7 @@
             // 2. 初始化 设置类型与 URL
             xhr.open('POST', 'http://127.0.0.1:8000/server')
             // 3. 发送
-            xhr.send();
+            xhr.send('a=100&b=200&c=300');
             // 4. 事件绑定
             xhr.onreadystatechange = function() {
                 // 判断
