--- a/ajaxPOST.html
+++ b/ajaxPOST.html
@@ -24,6 +24,9 @@
             const xhr = new XMLHttpRequest();
             // 2. 初始化 设置类型与 URL
             xhr.open('POST', 'http://127.0.0.1:8000/server')
+            // 设置请求头
+            xhr.setRequestHeader('Content-Type','application/x-www-form-urlencoded')
+            xhr.setRequestHeader('aaa','bbb')
             // 3. 发送
             xhr.send('a=100&b=200&c=300');
             // 4. 事件绑定
