--- a/ajaxPOST.html
+++ b/ajaxPOST.html
@@ -26,7 +26,7 @@
             xhr.open('POST', 'http://127.0.0.1:8000/server')
             // 设置请求头
             xhr.setRequestHeader('Content-Type','application/x-www-form-urlencoded')
-            xhr.setRequestHeader('aaa','bbb')
+            xhr.setRequestHeader('aaa','bbb') // 自定义头
             // 3. 发送
             xhr.send('a=100&b=200&c=300');
             // 4. 事件绑定
